crates/ruff/src/rules/flake8_quotes/snapshots/ruff__rules__flake8_quotes__tests__require_docstring_singles_over_docstring_doubles_module_singleline.py.snap
---
source: crates/ruff/src/rules/flake8_quotes/mod.rs
---
./resources/test/fixtures/flake8_quotes/docstring_doubles_module_singleline.py:1:1: Q002 [*] Double quote docstring found but single quotes preferred
  |
1 | """ Double quotes singleline module docstring """
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Q002
2 | """ this is not a docstring """
  |
  = help: Replace double quotes docstring with single quotes

ℹ Suggested fix
1   |-""" Double quotes singleline module docstring """
  1 |+''' Double quotes singleline module docstring '''
2 2 | """ this is not a docstring """
3 3 | 
4 4 | def foo():


