crates/ruff/src/rules/flake8_quotes/snapshots/ruff__rules__flake8_quotes__tests__require_docstring_singles_over_docstring_singles_module_multiline.py.snap
---
source: crates/ruff/src/rules/flake8_quotes/mod.rs
expression: diagnostics
---
- kind:
    name: BadQuotesMultilineString
    body: Single quote multiline found but double quotes preferred
    commit: Replace single multiline quotes with double quotes
    fixable: true
  location:
    row: 4
    column: 0
  end_location:
    row: 6
    column: 3
  fix:
    content: "\"\"\"\nthis is not a docstring\n\"\"\""
    location:
      row: 4
      column: 0
    end_location:
      row: 6
      column: 3
  parent: ~
- kind:
    name: BadQuotesMultilineString
    body: Single quote multiline found but double quotes preferred
    commit: Replace single multiline quotes with double quotes
    fixable: true
  location:
    row: 9
    column: 0
  end_location:
    row: 11
    column: 3
  fix:
    content: "\"\"\"\nthis is not a docstring\n\"\"\""
    location:
      row: 9
      column: 0
    end_location:
      row: 11
      column: 3
  parent: ~

