crates/ruff/src/rules/flake8_quotes/snapshots/ruff__rules__flake8_quotes__tests__require_docstring_singles_over_docstring_singles_module_singleline.py.snap
---
source: crates/ruff/src/rules/flake8_quotes/mod.rs
expression: diagnostics
---
- kind:
    name: BadQuotesMultilineString
    body: Single quote multiline found but double quotes preferred
    suggestion: Replace single multiline quotes with double quotes
    fixable: true
  location:
    row: 2
    column: 0
  end_location:
    row: 2
    column: 31
  fix:
    edits:
      - location:
          row: 2
          column: 0
        end_location:
          row: 2
          column: 31
        content: "\"\"\" this is not a docstring \"\"\""
  parent: ~
- kind:
    name: BadQuotesMultilineString
    body: Single quote multiline found but double quotes preferred
    suggestion: Replace single multiline quotes with double quotes
    fixable: true
  location:
    row: 6
    column: 0
  end_location:
    row: 6
    column: 31
  fix:
    edits:
      - location:
          row: 6
          column: 0
        end_location:
          row: 6
          column: 31
        content: "\"\"\" this is not a docstring \"\"\""
  parent: ~

