crates/ruff/src/rules/flake8_quotes/snapshots/ruff__rules__flake8_quotes__tests__require_doubles_over_singles.py.snap
---
source: crates/ruff/src/rules/flake8_quotes/mod.rs
expression: diagnostics
---
- kind:
    name: BadQuotesInlineString
    body: Single quotes found but double quotes preferred
    suggestion: Replace single quotes with double quotes
    fixable: true
  location:
    row: 1
    column: 24
  end_location:
    row: 1
    column: 45
  fix:
    edits:
      - location:
          row: 1
          column: 24
        end_location:
          row: 1
          column: 45
        content: "\"single quote string\""
  parent: ~
- kind:
    name: BadQuotesInlineString
    body: Single quotes found but double quotes preferred
    suggestion: Replace single quotes with double quotes
    fixable: true
  location:
    row: 2
    column: 24
  end_location:
    row: 2
    column: 46
  fix:
    edits:
      - location:
          row: 2
          column: 24
        end_location:
          row: 2
          column: 46
        content: "u\"double quote string\""
  parent: ~
- kind:
    name: BadQuotesInlineString
    body: Single quotes found but double quotes preferred
    suggestion: Replace single quotes with double quotes
    fixable: true
  location:
    row: 3
    column: 24
  end_location:
    row: 3
    column: 46
  fix:
    edits:
      - location:
          row: 3
          column: 24
        end_location:
          row: 3
          column: 46
        content: "f\"double quote string\""
  parent: ~

