crates/ruff/src/rules/flake8_quotes/snapshots/ruff__rules__flake8_quotes__tests__require_doubles_over_singles_escaped.py.snap
---
source: crates/ruff/src/rules/flake8_quotes/mod.rs
expression: diagnostics
---
- kind:
    name: AvoidableEscapedQuote
    body: Change outer quotes to avoid escaping inner quotes
    commit: Change outer quotes to avoid escaping inner quotes
    fixable: true
  location:
    row: 1
    column: 25
  end_location:
    row: 1
    column: 47
  fix:
    content: "'This is a \"string\"'"
    location:
      row: 1
      column: 25
    end_location:
      row: 1
      column: 47
  parent: ~
- kind:
    name: AvoidableEscapedQuote
    body: Change outer quotes to avoid escaping inner quotes
    commit: Change outer quotes to avoid escaping inner quotes
    fixable: true
  location:
    row: 9
    column: 4
  end_location:
    row: 9
    column: 16
  fix:
    content: "'\"string\"'"
    location:
      row: 9
      column: 4
    end_location:
      row: 9
      column: 16
  parent: ~

