crates/ruff/src/rules/flake8_quotes/snapshots/ruff__rules__flake8_quotes__tests__require_doubles_over_singles_implicit.py.snap
---
source: crates/ruff/src/rules/flake8_quotes/mod.rs
---
./resources/test/fixtures/flake8_quotes/singles_implicit.py:2:5: Q000 [*] Single quotes found but double quotes preferred
  |
2 | x = (
3 |     'This'
  |     ^^^^^^ Q000
4 |     'is'
5 |     'not'
  |
  = help: Replace single quotes with double quotes

ℹ Suggested fix
1 1 | x = (
2   |-    'This'
  2 |+    "This"
3 3 |     'is'
4 4 |     'not'
5 5 | )

./resources/test/fixtures/flake8_quotes/singles_implicit.py:3:5: Q000 [*] Single quotes found but double quotes preferred
  |
3 | x = (
4 |     'This'
5 |     'is'
  |     ^^^^ Q000
6 |     'not'
7 | )
  |
  = help: Replace single quotes with double quotes

ℹ Suggested fix
1 1 | x = (
2 2 |     'This'
3   |-    'is'
  3 |+    "is"
4 4 |     'not'
5 5 | )
6 6 | 

./resources/test/fixtures/flake8_quotes/singles_implicit.py:4:5: Q000 [*] Single quotes found but double quotes preferred
  |
4 |     'This'
5 |     'is'
6 |     'not'
  |     ^^^^^ Q000
7 | )
  |
  = help: Replace single quotes with double quotes

ℹ Suggested fix
1 1 | x = (
2 2 |     'This'
3 3 |     'is'
4   |-    'not'
  4 |+    "not"
5 5 | )
6 6 | 
7 7 | x = (

./resources/test/fixtures/flake8_quotes/singles_implicit.py:8:5: Q000 [*] Single quotes found but double quotes preferred
   |
 8 | x = (
 9 |     'This' \
   |     ^^^^^^ Q000
10 |     'is' \
11 |     'not'
   |
   = help: Replace single quotes with double quotes

ℹ Suggested fix
5 5 | )
6 6 | 
7 7 | x = (
8   |-    'This' \
  8 |+    "This" \
9 9 |     'is' \
10 10 |     'not'
11 11 | )

./resources/test/fixtures/flake8_quotes/singles_implicit.py:9:5: Q000 [*] Single quotes found but double quotes preferred
   |
 9 | x = (
10 |     'This' \
11 |     'is' \
   |     ^^^^ Q000
12 |     'not'
13 | )
   |
   = help: Replace single quotes with double quotes

ℹ Suggested fix
6  6  | 
7  7  | x = (
8  8  |     'This' \
9     |-    'is' \
   9  |+    "is" \
10 10 |     'not'
11 11 | )
12 12 | 

./resources/test/fixtures/flake8_quotes/singles_implicit.py:10:5: Q000 [*] Single quotes found but double quotes preferred
   |
10 |     'This' \
11 |     'is' \
12 |     'not'
   |     ^^^^^ Q000
13 | )
   |
   = help: Replace single quotes with double quotes

ℹ Suggested fix
7  7  | x = (
8  8  |     'This' \
9  9  |     'is' \
10    |-    'not'
   10 |+    "not"
11 11 | )
12 12 | 
13 13 | x = (

./resources/test/fixtures/flake8_quotes/singles_implicit.py:27:1: Q000 [*] Single quotes found but double quotes preferred
   |
27 | if True:
28 |     'This can use "single" quotes'
29 | 'But this needs to be changed'
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Q000
   |
   = help: Replace single quotes with double quotes

ℹ Suggested fix
24 24 | 
25 25 | if True:
26 26 |     'This can use "single" quotes'
27    |-'But this needs to be changed'
   27 |+"But this needs to be changed"


