crates/ruff/src/rules/flake8_quotes/snapshots/ruff__rules__flake8_quotes__tests__require_doubles_over_singles_multiline_string.py.snap
---
source: crates/ruff/src/rules/flake8_quotes/mod.rs
expression: diagnostics
---
- - kind:
      name: BadQuotesMultilineString
      body: Single quote multiline found but double quotes preferred
      suggestion: Replace single multiline quotes with double quotes
      fixable: true
    location:
      row: 1
      column: 4
    end_location:
      row: 3
      column: 12
    fix:
      content: "\"\"\" This 'should'\nbe\n'linted' \"\"\""
      location:
        row: 1
        column: 4
      end_location:
        row: 3
        column: 12
    parent: ~

