crates/ruff/src/rules/flake8_quotes/snapshots/ruff__rules__flake8_quotes__tests__require_singles_over_doubles.py.snap
---
source: crates/ruff/src/rules/flake8_quotes/mod.rs
expression: diagnostics
---
- kind:
    name: BadQuotesInlineString
    body: Double quotes found but single quotes preferred
    suggestion: Replace double quotes with single quotes
    fixable: true
  location:
    row: 1
    column: 24
  end_location:
    row: 1
    column: 45
  fix:
    edits:
      - location:
          row: 1
          column: 24
        end_location:
          row: 1
          column: 45
        content: "'double quote string'"
  parent: ~
- kind:
    name: BadQuotesInlineString
    body: Double quotes found but single quotes preferred
    suggestion: Replace double quotes with single quotes
    fixable: true
  location:
    row: 2
    column: 24
  end_location:
    row: 2
    column: 46
  fix:
    edits:
      - location:
          row: 2
          column: 24
        end_location:
          row: 2
          column: 46
        content: "u'double quote string'"
  parent: ~
- kind:
    name: BadQuotesInlineString
    body: Double quotes found but single quotes preferred
    suggestion: Replace double quotes with single quotes
    fixable: true
  location:
    row: 3
    column: 24
  end_location:
    row: 3
    column: 46
  fix:
    edits:
      - location:
          row: 3
          column: 24
        end_location:
          row: 3
          column: 46
        content: "f'double quote string'"
  parent: ~

